# ovis_ros2

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  ovis.repos
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
docs/: docker_architecture_dev.puml  ros_architecture.puml
src/kinova_bringup/: CMakeLists.txt  package.xml  setup.py
src/kinova_bringup/launch/: kinova_robot_launch.py  kinova_robot_sim.launch.py  moveit_robot.launch.py  moveit_robot_launch.py
src/kinova_bringup/moveit_resource/: controllers.yaml  controllers_ros_control.yaml  fake_controllers.yaml  j2n6s300.srdf  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ovis.srdf  visualization.rviz
src/kinova_demo/: CMakeLists.txt  package.xml  setup.py
src/kinova_demo/ros2_nodes/: fingers_action_client.py  joints_action_client.py  pose_action_client.py
src/kinova_description/: CMakeLists.txt  package.xml
src/kinova_driver/: CMakeLists.txt  package.xml
src/kinova_driver/include/kinova/: KinovaTypes.h
src/kinova_driver/include/kinova_driver/: joint_trajectory_action_server.h  kinova_arm_kinematics.h  kinova_comm.h
src/kinova_driver/src/: kinova_api.cpp  kinova_comm.cpp  kinova_fingers_action.cpp  kinova_joint_angles_action.cpp  kinova_joint_trajectory_controller.cpp  kinova_ros_types.cpp
src/kinova_driver/src/joint_trajectory_action/: gripper_command_action_server.cpp  joint_trajectory_action_server.cpp
src/kinova_driver/src/nodes/: kinova_tf_updater.cpp
src/kinova_msgs/: CMakeLists.txt  package.xml
src/kinova_msgs/action/: ArmJointAngles.action  ArmKinovaPose.action
src/kinova_msgs/msg/: KinovaPose.msg
src/kinova_msgs/srv/: AddPoseToCartesianTrajectory.srv
src/moveit_servo/config/: panda_simulated_config.yaml  panda_simulated_config_pose_tracking.yaml
src/moveit_servo/launch/: pose_tracking_example.launch.py  servo_example.launch.py
src/moveit_servo/test/: pose_tracking_test.cpp  publish_fake_jog_commands.cpp
src/ovis_arm_ikfast_plugin/: CMakeLists.txt  ovis_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/ovis_arm_ikfast_plugin/src/: ovis_arm_ikfast_moveit_plugin.cpp  ovis_arm_ikfast_solver.cpp
src/ovis_bringup/: CMakeLists.txt  package.xml
src/ovis_bringup/config/: bluethoot_mapping.yaml  ovis_controllers.yaml  usb_mapping.yaml
src/ovis_bringup/launch/: combined.launch.py  common.launch.py  launch.py  launch2.py  ovis_controller_usb.launch.py  real.launch.py  rove_controller_bluethoot.launch.py  sim.launch.py
src/ovis_bringup/scripts/: publish_trajectory.py
src/ovis_bringup/src/: ovis_controller_node.cpp
src/ovis_control/: CMakeLists.txt  ovis_control.xml  package.xml
src/ovis_control/include/kinova_driver/: .kinova_fingers_action.h  .kinova_joint_angles_action.h  .kinova_joint_trajectory_controller.h  .kinova_tf_updater.h  .kinova_tool_pose_action.h  gripper_command_action_server.h  kinova_api.h  kinova_arm.h  kinova_comm.h  kinova_ros_types.h
src/ovis_control/include/ovis_control/: ovis_control.hpp  visibility_control.h
src/ovis_control/src/: .kinova_arm.cpp  .kinova_arm_kinematics.cpp  .kinova_joint_trajectory_controller.cpp  .kinova_tool_pose_action.cpp  kinova_comm.cpp  kinova_ros_types.cpp  ovis_control.cpp
src/ovis_control/src/.joint_trajectory_action/: positional_action_server.cpp
src/ovis_control/src/nodes/: kinova_arm_driver.cpp  kinova_interactive_control.cpp
src/ovis_control/test/: test_ovis_control.cpp
src/ovis_controller/: CMakeLists.txt  ovis_controller.xml  package.xml
src/ovis_controller/.test/: ovis_controller_interface_preceeding_params.yaml  test_ovis_controller_interface.cpp  test_ovis_controller_interface.hpp  test_ovis_controller_interface_preceeding.cpp
src/ovis_controller/include/ovis_controller/: ovis_controller_interface.hpp  validate_ovis_controller_interface_parameters.hpp  visibility_control.h
src/ovis_controller/src/: ovis_controller_interface.cpp  ovis_controller_interface.yaml
src/ovis_controller/test/: ovis_controller_interface_params.yaml  test_load_ovis_controller_interface.cpp
src/ovis_description/: CMakeLists.txt  Dockerfile  README.md  package.xml
src/ovis_description/config/: amazon_bridge.yaml  basic.rviz  basic2.rviz  default_bridge.yaml  moveit.rviz  robot_bridge.yaml
src/ovis_description/launch/: amazon.launch.py  launch.py  sim.launch.py
src/ovis_description/urdf/: flipper.urdf.xacro  gazebo.urdf.xacro  kinova_common.xacro  ovis.common.xacro  ovis.gazebo  ovis.ros2_control.urdf.xacro  ovis.ros2_control.xacro  ovis.standalone.urdf.xacro  ovis.urdf.xacro  ovis_ros1.urdf.xacro  ovis_standalone.urdf  (+2 more)
src/ovis_ik/: README.md  package.xml  setup.cfg  setup.py
src/ovis_ik/ovis_ik/: __init__.py  constant_vel_publisher.py  fk_simulation_node.py  ovis_viz_node.py  velocity_node.py
src/ovis_ik/resource/: ovis_ik
src/ovis_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/ovis_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ovis_moveit_servo/: CMakeLists.txt  package.xml
src/ovis_realtime_servo/: CMakeLists.txt  package.xml
src/ovis_realtime_servo/config/: demo_rviz_config.rviz
src/ovis_realtime_servo/launch/: servo_cpp_interface_demo.launch.py
src/ovis_ros2_control/: CMakeLists.txt  ovis_ros2_control.xml  package.xml
src/ovis_ros2_control/include/ovis_ros2_control/: ovis_hw_interface.hpp  visibility_control.h
src/ovis_ros2_control/src/: ovis_hw_interface.cpp
src/ovis_ros2_control/test/: test_ovis_hw_interface.cpp
src/ovis_servo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ovis_servo/config/: ovis_gazebo_config.yaml  ovis_simulated_config.yaml  ovis_simulated_config_pose_tracking.yaml
src/ovis_servo/launch/: pose_tracking_example.launch.py  servo.launch.py  servo_demo.launch.py  servo_gazebo.launch.py
src/ovis_servo/ovis_servo/: ovis_ik.py
src/ovis_servo/src/: joystick_servo copy.cpp  joystick_servo.cpp  servo_keyboard_input.cpp
src/ovis_template/: package.xml  setup.cfg  setup.py
src/realtime_servo/: CMakeLists.txt  package.xml
(+78 files in other folders)
