<?xml version="1.0"?>
<package format="3">
  <name>kinova_description</name>
  <version>0.0.1</version>
  <description>
      3D model of various Kinova robotic arms.
      Includes the model and URDF files for working with an arm in RViz or Gazebo.
  </description>
  <maintainer email="support@kinova.ca">Kinova Support</maintainer>
  <author>Kinova Support</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/kinova_description</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


