<?xml version="1.0"?>
<package format="3">
  <name>kinova_msgs</name>
  <version>0.0.1</version>
  <description >
  This contains the messages, actions and services for interfacing with the Kinova
  Kinovathrough ROS.
  </description>

  <author email="ibaranov@clearpathrobotics.com">Ilia Baranov (Clearpath)</author>
  <author email="jschmidt@clearpathrobotics.com">Jeff Schmidt (Clearpath)</author>
  <author email="abencz@clearpathrobotics.com">Alex Bencz (Clearpath)</author>
  <author>Matt DeDonato (WPI)</author>
  <maintainer email="support@kinova.ca">Kinova Support</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/jaco</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
