<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ovis_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="capra@ens.etsmtl.ca">capra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>hardware_interface</build_depend>

  <build_depend>pluginlib</build_depend>

  <build_depend>rclcpp</build_depend>

  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>angles</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
